syntax = "proto3";

package warp;

option go_package = "github.com/ava-labs/avalanchego/proto/pb/warp";

service Signer {
  rpc Sign(SignRequest) returns (SignResponse);
}

message SignRequest {
  uint32 network_id = 1;
  bytes source_chain_id = 2;
  bytes payload = 3;
}

message SignResponse {
  bytes signature = 1;
}
